<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id = "@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:context=".MainActivity">





            <TextView
                android:id="@+id/Pizza1_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/pizza_1" />
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/Pizza1_textview"
                app:layout_constraintTop_toBottomOf="@id/Pizza1_textview"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pizza1_diameter_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/divider1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pizza1_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/divider1"
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    android:inputType="numberDecimal"
                    android:hint="@string/pizza_size" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pizza1_price_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pizza1_diameter_layout"
                app:layout_constraintTop_toBottomOf="@id/pizza1_diameter_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pizza1_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/pizza1_diameter_layout"
                    app:layout_constraintTop_toBottomOf="@id/pizza1_diameter_layout"
                    android:inputType="numberDecimal"
                    android:hint="@string/pizza_price" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pizza1_amount_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pizza1_price_layout"
                app:layout_constraintTop_toBottomOf="@id/pizza1_price_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pizza1_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/pizza1_price_layout"
                    app:layout_constraintTop_toBottomOf="@id/pizza1_price_layout"
                    android:inputType="number"
                    android:hint="@string/pizza_amount" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/Pizza2_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@id/pizza1_amount_layout"
                app:layout_constraintTop_toBottomOf="@id/pizza1_amount_layout"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/pizza_2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/Pizza2_textview"
                app:layout_constraintTop_toBottomOf="@id/Pizza2_textview"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pizza2_diameter_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/divider2"
                app:layout_constraintTop_toBottomOf="@id/divider2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pizza2_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/divider2"
                    app:layout_constraintTop_toTopOf="@id/divider2"
                    android:inputType="numberDecimal"
                    android:hint="@string/pizza_size" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pizza2_price_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pizza2_diameter_layout"
                app:layout_constraintTop_toBottomOf="@id/pizza2_diameter_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pizza2_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/pizza2_diameter_layout"
                    app:layout_constraintTop_toBottomOf="@id/pizza2_diameter_layout"
                    android:inputType="numberDecimal"
                    android:hint="@string/pizza_price" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pizza2_amount_layout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/pizza2_price_layout"
                app:layout_constraintTop_toBottomOf="@id/pizza2_price_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pizza2_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/pizza2_price_layout"
                    app:layout_constraintTop_toBottomOf="@id/pizza2_price_layout"
                    android:inputType="number"
                    android:hint="@string/pizza_amount" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_compare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/compare"
                app:layout_constraintEnd_toEndOf="@id/pizza2_amount_layout"
                app:layout_constraintTop_toBottomOf="@id/pizza2_amount_layout"
                />

            <TextView
                android:id="@+id/compared_pizzas_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/material_on_surface_emphasis_medium"
                app:layout_constraintEnd_toEndOf="@id/button_compare"
                app:layout_constraintTop_toBottomOf="@id/button_compare"

                 />
            <TextView
                android:id="@+id/compared_pizzas_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/material_on_surface_emphasis_medium"
                android:text=""
                app:layout_constraintEnd_toEndOf="@id/compared_pizzas_size"
                app:layout_constraintTop_toBottomOf="@id/compared_pizzas_size"

                />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintTop_toBottomOf="@id/scroll_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!--app:adUnitId="ca-app-pub-5875301961937399/3607067042"-->

    </com.google.android.gms.ads.AdView>
    </androidx.constraintlayout.widget.ConstraintLayout>
